--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,67 @@
 body {
-    background: gray;
+    background: black;
+    font-family: monospace;
 }
 
 .square {
     position: relative;
     width: 50%;
-    text-align: center;
+    /* text-align: center;  */
+    margin: auto;
+     
 }
 
-.square:after {
+.square::after {
     content: "";
     display: block;
     padding-bottom: 100%;
+    
 } 
 
 .status-bar{
     
-    background: blue;
-    margin:auto;
-    width: 50%;
+
+    background: black;
+    padding-top: 5%;
+    padding-bottom: 5%;
+     width: 50%;
+    margin: auto;
     text-align: center;
+    color: white;
+    
+     
+    
+    font-size: 5vw;
     
     
 }
+
+.hidden {
+     
+    visibility: hidden;
+}
+
+.no-display {
+     
+    display: none;
+}
+
+.left-top{
+    border-radius: 10% 0 0 0 
+}
+
+.right-top{
+    border-radius: 0 10% 0 0 
+}
+
+.left-bottom{
+    border-radius: 0 0 0 10% 
+}
+
+.right-bottom{
+    border-radius: 0 0 10% 0 
+}
+
 
 
 
@@ -33,24 +72,61 @@ body {
     display: inline-grid;
     grid-template-columns: auto auto auto;
      
-    background-color: white; 
-    border: 1px solid white;
+    background-color: rgb(0, 0, 0); 
+      
+    box-sizing: border-box;
     padding: 0px;
     margin: 0px;
      
     position: absolute;
     width: 100%;
     height: 100%;
+    gap: 5%;
     
 }
 
 
 .grid-item {
-    background-color: gray;
-    border: 1px solid white;  
+    background-color: rgb(255, 255, 255);  
     padding: 0px;
     margin: 0px;
-    font-size: 30px;
+    box-sizing: border-box;
+}
+
+
+ 
+
+.select:hover {
+    background-color: rgb(128, 128, 128);
+}
+
+footer {
+    padding-top: 10%;
+    padding-bottom: 10%;
+    margin: auto;
     text-align: center;
 }
 
+footer p {
+    color:gray;
+     
+    font-size: 4vw;
+    padding-top: 5%;
+    margin: 0px;
+}
+
+#sub-bar {
+    padding-top: 5%;
+    font-size: 5vw;
+    text-align: center;
+    color:gray;
+    margin: auto;
+    padding-right: 10px;
+     
+}
+
+.turn {
+    color: white;
+    font-size: 10vw;
+    margin-left: 3px;
+ }
