--- a/styles.css
+++ b/styles.css
@@ -20,18 +20,18 @@ body {
 
 .status-bar{
     
-
+     
     background: black;
     padding-top: 5%;
     padding-bottom: 5%;
-     width: 50%;
+    width: 100%;
     margin: auto;
     text-align: center;
-    color: white;
+    color: rgb(255, 255, 255);
     
      
     
-    font-size: 5vw;
+    font-size: 7.5vw;
     
     
 }
@@ -62,9 +62,11 @@ body {
     border-radius: 0 0 10% 0 
 }
 
-
-
-
+.grid-item2 {
+     
+    grid-column: 1/ span 3;
+    
+}
 
 
 
@@ -72,22 +74,23 @@ body {
     display: inline-grid;
     grid-template-columns: auto auto auto;
      
-    background-color: rgb(0, 0, 0); 
+     
       
-    box-sizing: border-box;
+     
     padding: 0px;
     margin: 0px;
      
     position: absolute;
     width: 100%;
     height: 100%;
-    gap: 5%;
+    gap: 2%;
     
 }
 
 
 .grid-item {
     background-color: rgb(255, 255, 255);  
+    border: 1vw solid white;
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
@@ -101,7 +104,7 @@ body {
 }
 
 footer {
-    padding-top: 10%;
+    padding-top: 5%;
     padding-bottom: 10%;
     margin: auto;
     text-align: center;
@@ -109,9 +112,8 @@ footer {
 
 footer p {
     color:gray;
-     
-    font-size: 4vw;
-    padding-top: 5%;
+    font-size: 3vw;
+    padding-top: 15%;
     margin: 0px;
 }
 
@@ -119,7 +121,7 @@ footer p {
     padding-top: 5%;
     font-size: 5vw;
     text-align: center;
-    color:gray;
+    color:rgb(255, 255, 255);
     margin: auto;
     padding-right: 10px;
      
@@ -129,4 +131,12 @@ footer p {
     color: white;
     font-size: 10vw;
     margin-left: 3px;
+ }
+ 
+ button {
+    background-color: #4CAF50;
+    text-decoration: none;
+    border: none;
+    color: black;
+
  }
