--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
     
      
     
-    font-size: 7.5vw;
+    font-size: 7vw;
     
     
 }
@@ -83,7 +83,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    gap: 2%;
+    gap: 3%;
     
 }
 
@@ -133,19 +133,22 @@ footer p {
  }
  
 button {
-    background-color: white;
+    background-color: gray;
     border: medium solid black;
     text-decoration: none;
     color: black; 
     outline: none;
     font-family: monospace;
     font-size: 5vw;
+    border-radius: 10px;
+    text-align: center;
+    padding: 1vw;
 }
 
 button:hover {
      background-color: black;
-     color:white;
-     border: medium solid white;
+     color:gray;
+     border: medium solid gray;
 }
 
 
