--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,6 @@ body {
 } 
 
 .status-bar{
-    
-     
     background: black;
     padding-top: 5%;
     padding-bottom: 5%;
@@ -28,19 +26,10 @@ body {
     margin: auto;
     text-align: center;
     color: rgb(255, 255, 255);
-    
-     
-    
     font-size: 7vw;
-    
-    
 }
 
-.hidden {
-     
-    visibility: hidden;
-}
-
+ 
 .no-display {
      
     display: none;
@@ -62,38 +51,27 @@ body {
     border-radius: 0 0 10% 0 
 }
 
-.grid-item2 {
-     
-    grid-column: 1/ span 3;
-    
-}
-
+ 
 
 
 .grid-container {
-    display: inline-grid;
+    display: grid;
     grid-template-columns: auto auto auto;
-     
-     
-      
-     
     padding: 0px;
     margin: 0px;
-     
     position: absolute;
     width: 100%;
     height: 100%;
-    gap: 3%;
-    
+    gap: 1vw;
 }
 
 
 .grid-item {
     background-color: rgb(255, 255, 255);  
-    border: 1vw solid white;
+    border: none;
     padding: 0px;
     margin: 0px;
-    box-sizing: border-box;
+     
 }
 
 
@@ -159,5 +137,8 @@ a:link, a:visited {
 }
   
 a:link:active, a:visited:active, a:hover {
-    color: white;
+    color: LightSeaGreen;
 }
+
+ 
+ 
